--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,15 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+// @use '@material/theme' with (
+// $primary: #6200ee,
+// $secondary: #faab1a,
+// $background: #fff,
+// );
+
+// @use './styles/body';
+// @use '@material/typography/mdc-typography';
+// @use '@angular-mdc/theme/material';
+// @use './styles/button';
